Fix #ui height on mobile The address bar screws with viewport height

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -527,8 +527,8 @@ button.button.dark:disabled {
 
 #ui {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     transition: width ease-in-out .25s, left ease-in-out .25s;
